src/objects/Contract__c.object
<CustomObject>
    <description>Custom contract object to replace standard contract object. Reason for replacing standard contract object is to control sharing on contracts separately to account object sharing (this cannot be done with the standard object).</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No Work Sites or Legal Entities match your search</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Work Site, Legal Entity</value>
            </filterItems>
            <infoMessage>Only Work Sites and Legal Entities will be returned in search</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No contact persons matching your search have been found</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contact Person</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_SAP_Number__c</fullName>
        <externalId>true</externalId>
        <label>Contract SAP Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Notice__c</fullName>
        <label>Expiration Notice</label>
        <picklist>
            <picklistValues>
                <fullName>30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OldContractId__c</fullName>
        <description>Pre-migration ID. This field may be safely removed post 25/9/2014</description>
        <externalId>true</externalId>
        <inlineHelpText>Pre-migration ID. This field may be safely removed post 25/9/2014</inlineHelpText>
        <label>OldContractId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ongoing_contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to set the contract as On-going</description>
        <label>Ongoing contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_of_Nordic_Agreement_Name__c</fullName>
        <label>Part of Nordic Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is ticked the contract will only be able to be viewed/edited in Salesforce by the owner and users in the direct line above the owner in the role hierarchy</inlineHelpText>
        <label>Private Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Customer Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostNord Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <label>Special Terms</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment_Freetext__c</fullName>
        <label>Terms of Payment Freetext</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment__c</fullName>
        <label>Terms of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>7 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 days from the accounting date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 5 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 8 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 12 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 14 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 15 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 20 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 25 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 30 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 45 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 60 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month + 90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month extended with 2 days with fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month extended with 2 days without fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit current month extended with 7 days with fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of contract</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic Framework Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Active_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Contract_SAP_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Sales_Area__c</field>
            <operation>equals</operation>
            <value>1000,4000</value>
        </filters>
        <label>My Active Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PN_DK_Aktive_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Contract_SAP_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Sales_Area__c</field>
            <operation>equals</operation>
            <value>1000,4000</value>
        </filters>
        <label>PN DK Aktive Contracts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Contract_End_Date_Not_Blank_For_Active</fullName>
        <active>true</active>
        <description>When a contract is changed to status Active, the contract end date must be set</description>
        <errorConditionFormula>ISPICKVAL(Status__c, &apos;Active&apos;) 
&amp;&amp; ISBLANK(Contract_End_Date__c) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c != true</errorConditionFormula>
        <errorDisplayField>Contract_End_Date__c</errorDisplayField>
        <errorMessage>Contract end date needs to be set for active contracts</errorMessage>
    </validationRules>
</CustomObject>